examples/tactics/neg/LemmaArgs.fst.hints
[
  "}‘¦ωνδ“1ϊ±ƒ®’",
  [
    [
      "LemmaArgs.lemma_example1",
      1,
      2,
      1,
      [
        "@MaxIFuel_assumption", "@query", "assumption_Prims.HasEq_int",
        "refinement_interpretation_LemmaArgs_Tm_refine_f0496eb03f3fb51b5e4ca0d53ea58c01"
      ],
      0,
      "eba02d45b3c167ecb37d9ce1bc45affc"
    ],
    [
      "LemmaArgs.example1",
      1,
      2,
      1,
      [
        "@MaxIFuel_assumption", "@query",
        "FStar.Tactics.Types_pretyping_44d92714caae41c1068a904c983c4672",
        "Prims_pretyping_f8666440faa91836cc5a13998af863fc",
        "assumption_Prims.HasEq_int",
        "data_elim_FStar.Tactics.Result.Failed",
        "data_typing_intro_FStar.Tactics.Result.Failed@tok",
        "fuel_guarded_inversion_FStar.Pervasives.Native.tuple2",
        "fuel_guarded_inversion_FStar.Tactics.Result.__result",
        "function_token_typing_Prims.unit", "unit_typing"
      ],
      0,
      "4d6443684019827a22630c2263411ab2"
    ]
  ]
]